# Snake

./: .gitignore  CMakeLists.txt
src/: main.cpp  snake.cpp  snake.h
